[project]
name = "genai-experience-concierge-frontend"
version = "0.1.0"
description = "Frontend streamlit application for the Gen AI Experience Concierge. Demonstrates usage of the standard LangGraph RemoteGraph client to access the deployed agents in Cloud Run."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.3.21",
    "streamlit>=1.42.2",
    "google-auth>=2.38.0",
    "pydantic-settings>=2.6.1",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["concierge_ui"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "mypy>=1.15.0",
    "pylint>=3.3.6",
]

# leave mypy checks to demo sub-projects
[tool.mypy]
packages = ["concierge_ui"]
disable_error_code = ["import-untyped"]

[tool.pylint.messages_control]
disable = ["wrong-import-order"]
